--- a/UwizardWPF/Views/MainWindow.xaml
+++ b/UwizardWPF/Views/MainWindow.xaml
@@ -7,9 +7,18 @@
         xmlns:views="clr-namespace:UwizardWPF.Views"
         DataContext="{Binding Main, Source={StaticResource Locator}}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="Auto" Width="Auto">
+        Title="UWizard Game Manager" Height="Auto" Width="Auto">
     <Grid>
-        <TabControl ItemsSource="{Binding Tabs}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Menu HorizontalAlignment="Left" VerticalAlignment="Top" Grid.Row="0">
+            <MenuItem Header="File">
+                <MenuItem Header="Exit" HorizontalAlignment="Left" Width="140" />
+            </MenuItem>
+        </Menu>
+        <TabControl ItemsSource="{Binding Tabs}" Grid.Row="1">
             <TabControl.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
